--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" sizes="32x32" href="/github.png" />
 
-    <title>Github profile finder</title>
+    <title>Github Search App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
